@@ -1,3 +1,7 @@
+2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b24
+	
+	* Make "Title" explicit to simplify ML version.
+
 2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b23
 
 	* bug in the delete/id2 code.  When delete is called from the pulldown 
